--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
 	<div id="map" class="map"></div>
 
+	<button id="auto">Auto</button>
+	<button id="bike">Bike</button>
+	<button id="other">Other Property</button>
+
+
 	<script src="js/leaflet.js"></script>
 	<script src="js/d3.min.js"></script>
+	<script src="js/jquery-1.12.0.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
