--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
 <body>
 
 	<div class="container">
-        <h1>Seattle 911 calls 2015</h1>
+        <h1>Seattle 911 calls in 2015</h1>
         <div class="row">           
             <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default" id="auto">Auto Theft</button>
+                    <button type="radio" class="btn btn-warning" id="auto">Auto Theft</button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default" id="bike">Bike Theft</button>
+                    <button type="radio" class="btn btn-danger" id="bike">Bike Theft</button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default" id="other">Other Property Theft</button> 
+                    <button type="radio" class="btn btn-primary" id="other">Other Property Theft</button> 
                 </div>
             </div>
+            <br>
             <div id="map" class="map"></div>
         </div>
         <div class= "row">
             <div class="col-6">
-                <input id="ex13" type="text" data-slider-ticks="[1,2,3,4,5,6,7,8,9,10,11,12]" data-slider-ticks-snap-bounds="1" data-slider-ticks-labels='["Jan", "Feb", "Mar", "Apr", "May" , "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]'/>
+                <input id="monthSilder" type="text" data-slider-ticks="[1,2,3,4,5,6,7,8,9,10,11,12]" data-slider-ticks-snap-bounds="1" data-slider-ticks-labels='["Jan", "Feb", "Mar", "Apr", "May" , "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]'/>
             </div>
             <div class="col-6">
-                <h3>Total records for <span>"Month"</span> : <span>"#"</span></h3>
+                <h3>Total records for <span id="month"></span>/2015 : <span id="numberOfRecord"></span></h3>
             </div>
         </div>
             
