--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">
-        <h1>Seattle 911 calls in 2015</h1>
+           <h1>Seattle 911 calls in 2015</h1>
         <div class="row">           
             <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
@@ -32,10 +32,10 @@
         </div>
         <div class= "row">
             <div class="col-6">
-                <input id="monthSilder" type="text" data-slider-ticks="[1,2,3,4,5,6,7,8,9,10,11,12]" data-slider-ticks-snap-bounds="1" data-slider-ticks-labels='["Jan", "Feb", "Mar", "Apr", "May" , "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]'/>
+                <input id="monthSilder" type="text" data-slider-ticks="[1,2,3,4,5,6,7,8,9,10,11,12,13]" data-slider-ticks-snap-bounds="1" data-slider-ticks-labels='["Jan", "Feb", "Mar", "Apr", "May" , "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec", "All"]'/>
             </div>
             <div class="col-6">
-                <h3>Total records for <span id="month"></span>/2015 : <span id="numberOfRecord"></span></h3>
+                <h3>Total records for <span id="month"></span> 2015 : <span id="numberOfRecord"></span></h3>
             </div>
         </div>
             
