--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">
-           <h1>Seattle 911 calls in 2015</h1>
+           <h1>Thefts in the Seattle are during 2015</h1>
         <div class="row">           
             <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
@@ -24,7 +24,7 @@
                     <button type="radio" class="btn btn-danger" id="bike">Bike Theft</button>
                 </div>
                 <div class="btn-group" role="group">
-                    <button type="radio" class="btn btn-primary" id="other">Other Property Theft</button> 
+                    <button type="radio" class="btn btn-primary" id="other">Property Theft</button> 
                 </div>
             </div>
             <br>
